<resources>
    <string name="app_name">JMAPP</string>

    <string-array name="generos">
        <item>M</item>
        <item>F</item>
    </string-array>
    <string-array name="niveles_educativos">
        <item>Primaria</item>
        <item>Secundaria</item>
    </string-array>
    <string-array name="grados">
        <item>1°</item>
        <item>2°</item>
        <item>3°</item>
        <item>4°</item>
        <item>5°</item>
        <item>6°</item>
    </string-array>
    <string-array name="secciones">
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>
    <string-array name="tipos_noticias">
        <item>Logros estudiantiles</item>
        <item>Eventos escolares</item>
        <item>Actualizaciones del personal</item>
        <item>Políticas y procedimientos</item>
        <item>Proyectos y programas educativos</item>
        <item>Orientación y consejería</item>
        <item>Actualizaciones de infraestructura</item>
        <item>Eventos de recaudación de fondos</item>
        <item>Noticias de la comunidad</item>
    </string-array>

    <string name="NotiTitle">!Aviso!</string>
    <string name="notiDescription">¿El Alumno no se encuentra en el salon de clases?</string>
    <string name="escribir_mensaje">Escribir mensaje...</string>
    <string name="enviar">Enviar</string>
    <string name="Justificacion_Tittle">Justifique la Inasistencia de su hijo</string>
    <string name="enviar_justificacion">Enviar mi Justificacion</string>
    <string name="resp_escuela">Respuesta de la Escuela</string>
    <string name="comunicar_docente">Comuniquese con el Docente a cargo</string>
    <string name="Mandar_Notifiación">Notifique al Padre o Apoderado</string>
    <string name="tareas">Tareas</string>
    <string name="proyectos">Proyectos</string>
    <string name="bienvenido">Bienvenido</string>

    <!-- OptionLogin -->
    <string name="qui_n_entrar_a_la_app">¿Quién entrará a la App?</string>
    <string name="inicio">Inicio</string>

    <!-- menuAdmin -->
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="crear_notificacion">Crear Notificacion</string>
    <string name="horario">Horario</string>
    <string name="justificaciones">Justificaciones</string>
    <string name="tablero_de_noticias">Tablero de Noticias</string>

    <!-- menuApoderado -->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string-array name="estados_asistencia">
        <item>Asistencia</item>
        <item>Tardanza</item>
        <item>Falta</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>