<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color4"
    tools:context=".view.EnNotiActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ToolbarP"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/toolbar"
        android:elevation="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNoti"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/librefranklin_mediumitalic"
        android:gravity="center"
        android:text="@string/NotiTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewEntorno"
        app:layout_constraintVertical_bias="0.158" />

    <TextView
        android:id="@+id/textViewNoti2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/librefranklin_mediumitalic"
        android:gravity="center"
        android:text="@string/notiDescription"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNoti"
        app:layout_constraintVertical_bias="0.25" />

    <ImageView
        android:id="@+id/imageViewEntorno"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/colegio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/ToolbarP"
        app:layout_constraintVertical_bias="0.116" />

    <Button
        android:id="@+id/buttonNoti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/md_theme_light_tertiary"
        android:textSize="16dp"
        android:fontFamily="@font/librefranklin_mediumitalic"
        android:text="@string/Mandar_Notifiación"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNoti2" />

</androidx.constraintlayout.widget.ConstraintLayout>

